--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,7 @@
 </head>
 
 <body>
-  <div class="title">
-    <div class="info is-hidden">
-      <h2>Clarx</h2>
-      <h1>Zig Zag</h1>
-      <p>press to play/pause</p>
-    </div>
-    <div class="spinner">
-      <div class="dot1"></div>
-      <div class="dot2"></div>
-    </div>
-  </div>
-  <canvas id="canvas"></canvas>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </body>
 
 </html>
