--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Frequency Visualizer</title>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:200,400"
+			rel="stylesheet"
+		/>
 	</head>
-
-	<style>
-		body {
-      height: 100vh;
-      padding: 0;
-      margin: 0;
-		}
-	</style>
 
 	<body>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
