--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,18 @@
 	</head>
 
 	<body>
-		<div class="container"><div class="svg-container"></div></div>
+		<div class="container">
+			<div class="info">
+				<div class="name">
+					<h1>tears in your face</h1>
+				</div>
+				<div class="time">0:00 / 1:39</div>
+			</div>
+			<div class="svg-container"></div>
+
+			<button class="btn" id="chooseFile">choose an mp3 file</button>
+			<input type="file" style="display: none" id="fileInput" />
+		</div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 	</body>
 </html>
