added loading label

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,13 @@
 				<p>or</p>
 				<p id="playSample" class="btn">play a sample</p>
 			</div>
-			<img src="static/audio.svg" alt="loading" class="loader hidden" />
+			<div
+				class="loader hidden"
+				style="display: flex; align-items: center; justify-content: center; flex-direction: column"
+			>
+				<img src="static/audio.svg" alt="loading" />
+				<p>loading</p>
+			</div>
 			<input type="file" class="hidden" id="fileInput" />
 			<div class="links">
 				<a target="_blank" href="https://jhonalino.com/">jhon alino</a>
